<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailRecipe">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_collapse"
            android:layout_width="match_parent"
            android:layout_height="@dimen/collapse_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:adjustViewBounds="true"
                android:contentDescription="@string/recipe_image"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/Theme.Bacon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorGray"
                android:layout_gravity="bottom">

                <TextView
                    android:id="@+id/detail_recipe_name"
                    style="@style/padding_style_text"
                    android:layout_width="@dimen/layout_txt_width"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center|start|bottom"
                    android:lines="@integer/txt_lines"
                    android:text="@string/recipe_name"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_large"
                    android:textStyle="bold"
                    app:layout_collapseMode="pin" />

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/padding_collapse"
        android:layout_marginBottom="@dimen/padding_collapse_bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/margin_style_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_collapse"
                android:fontFamily="sans-serif"
                android:gravity="center|start|bottom"
                android:text="Ingredients"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_width"
                android:background="@color/colorPrimary"
                style="@style/margin_style_text"/>

            <TextView
                android:id="@+id/ingredients_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/txt_sideMargin"
                android:paddingBottom="@dimen/txt_sideMargin"
                style="@style/margin_style_text"/>

            <TextView
                android:id="@+id/serving_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sideMargin"
                style="@style/margin_style_text"
                android:text="Calories/serving: "/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_collapse"
                android:layout_gravity="center"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/txt_large"
                android:textStyle="bold"
                android:text="@string/steps"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/steps_descr"
                style="@style/margin_style_text"/>

            <TextView
                android:id="@+id/steps_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:linksClickable="true"
                android:autoLink="web"
                style="@style/margin_style_text"/>

            <TextView
                android:id="@+id/website_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/txt_sideMargin"
                style="@style/margin_style_text"
                android:text="@string/source"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:paddingBottom="@dimen/padding_main"
        ads:adSize="LARGE_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:elevation="@dimen/fab_elevation"
        app:backgroundTint="@color/colorAccent"
        android:clickable="true"
        android:src="@drawable/baseline_thumb_up_black_18dp"
        android:contentDescription="@string/fab"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
